--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>maxmind-db</artifactId>
             <version>1.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
